@@ -21,6 +21,7 @@
 * Modified the ChatQueue to use priority
 * Added logging of debug, info, and error messages
 * Fixed a bug with mailall
+* Added timezone support
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
